# assignment_event-spiking-attention

./: .gitignore  CMakeLists.txt  README.md
app/scripts/: app_event-spiking-attention.xml
smoke-test/: CMakeLists.txt  post-test.sh  pre-test.sh  test.cpp  test.sh  test.xml
smoke-test/fixtures/: fixture.xml
src/: event-spiking-attention.cpp  event-spiking-attention.h
